--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
+  <%- include('./partials/header') %>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <%- include('./partials/navbar') %>
+    <h1>Hello Index</h1>
   </body>
 </html>
