--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,6 @@
   <%- include('./partials/header') %>
   <body>
     <%- include('./partials/navbar') %>
-    <h1>Hello Index</h1>
+    <h1>Welcome to Sophia's Dev Skills!</h1>
   </body>
 </html>
