--- a/views/skills/skills.ejs
+++ b/views/skills/skills.ejs
@@ -7,7 +7,7 @@
         <ul>
           <% skills.forEach((skill) => { %>
             <li>
-                <%= skill.skill %>
+                <a href='/skills/<%= s.skill %>'><%= s.skill %></a>
             </li>
           <% }) %>
         </ul> 
