--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,7 +4,7 @@
             <a href="/">Home</a>
         </li>
         <li>
-            <a href="/skills">Skills</a>
+            <a href="../skills/">Skills</a>
         </li>
     </ul>
 </nav>
