--- a/views/skills/skills.ejs
+++ b/views/skills/skills.ejs
@@ -5,7 +5,7 @@
     <%- include('../partials/navbar') %>
     <h1>Skills List</h1>
         <ul>
-          <% skills.forEach((skill) => { %>
+          <% skills.forEach((s) => { %>
             <li>
                 <a href='/skills/<%= s.skill %>'><%= s.skill %></a>
             </li>
