--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,5 +6,8 @@
         <li>
             <a href="../skills/">Skills</a>
         </li>
+        <li>
+            <a href="/">About</a>
+        </li>
     </ul>
 </nav>
