--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,9 +3,11 @@
         <li>
             <a href="/">Home</a>
         </li>
+        |
         <li>
-            <a href="../skills/">Skills</a>
+            <a href="/skills">Skills</a>
         </li>
+        |
         <li>
             <a href="/">About</a>
         </li>
