--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -5,5 +5,8 @@
     <%- include('../partials/navbar') %>
         <h1><%= skill.skill %></h1>
         <h3>Proficiency: <%= skill.proficiency %></h3>
+        <form action="/skills/<%= skill.skill %>?_method=DELETE" method="post">
+            <button type="submit">Delete Skill</button>
+        </form>
     </body>
 </html>
