--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
     <%- include('../partials/header') %>
     <body>
     <%- include('../partials/navbar') %>
+    <div style='text-align:center;'>
         <h1><%= skill.skill %></h1>
         <h3>Proficiency: <%= skill.proficiency %></h3>
-        <form action="/skills/<%= skill.skill %>?_method=DELETE" method="post">
-            <button type="submit">Delete Skill</button>
+        <a style='text-align:center;' href='/skills/<%= skill.skill %>/edit'>Edit Skill</a>
+        <form action='/skills/<%= skill.skill %>?_method=DELETE' method='POST'>
+            <button type='submit'>Delete Skill</button>
         </form>
+    </div>
     </body>
 </html>
