REFACTORED to inlcude id property

--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -7,7 +7,7 @@
         <ul>
           <% skills.forEach((s) => { %>
             <li>
-                <a href='/skills/<%= s.skill %>'><%= s.skill %></a>
+                <a href='/skills/<%= s.id %>'><%= s.skill %></a>
             </li>
             <% }) %>
           </ul> 
