--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -4,11 +4,11 @@
     <body>
     <%- include('../partials/navbar') %>
     <div style='text-align:center;'>
-        <h1><%= skill.skill %></h1>
-        <h3>Proficiency: <%= skill.proficiency %></h3>
-        <a style='text-align:center;' href='/skills/<%= skill.skill %>/edit'>Edit Skill</a>
-        <form action='/skills/<%= skill.skill %>?_method=DELETE' method='POST'>
-            <button type='submit'>Delete Skill</button>
+        <h1><%= skill.skill  %></h1>
+        <a class='link-button' href="/skills">Back</a>
+        <a class='link-button' style='text-align:center;' href='/skills/<%= skill.id %>/edit'>Edit Skill</a>
+        <form action='/skills/<%= skill.id %>?_method=DELETE' method='POST'>
+            <button style='background-color: red;' type='submit'>Delete Skill</button>
         </form>
     </div>
     </body>
