--- a/views/skills/edit.ejs
+++ b/views/skills/edit.ejs
@@ -5,12 +5,11 @@
     <%- include('../partials/navbar') %>
         <h1><%= title %></h1>
         <h2>Skill: <%= skill.skill %></h2>
-        <h3>Proficiency: <%= skill.proficiency %></h3>
         <form action='/skills/<%= skill.skill %>?_method=PUT' method='POST'>
             <input type='text' name='skill' placeholder='<%= skill.skill %>'/>
             <button type='submit'>Update</button>
-        </form>
-        <form name='proficiency' action='/skills/<%= skill.proficiency %>?_method=PUT' method='POST'>
+        </form><br>
+        <!-- <form name='proficiency' action='/skills/<%= skill.proficiency %>?_method=PUT' method='POST'>
             <select name='proficiency'>
                 <option value='Beginner'>Beginner</option>
                 <option value='Intermediate'>Intermediate</option>
@@ -19,6 +18,6 @@
                 <option value='Master'>Master</option>
             </select>
             <button type='submit'>Update</button>
-          </form>
+          </form> -->
     </body>
 </html>
