FIXED missed param changes

--- a/views/skills/edit.ejs
+++ b/views/skills/edit.ejs
@@ -5,7 +5,7 @@
     <%- include('../partials/navbar') %>
         <h1><%= title %></h1>
         <h2>Skill: <%= skill.skill %></h2>
-        <form action='/skills/<%= skill.skill %>?_method=PUT' method='POST'>
+        <form action='/skills/<%= skill.id %>?_method=PUT' method='POST'>
             <input type='text' name='skill' placeholder='<%= skill.skill %>'/>
             <button type='submit'>Update</button>
         </form><br>
